--- a/package.json
+++ b/package.json
@@ -10,7 +10,18 @@
     }
   ],
   "scripts": {
-    "start": "nodejs index.js"
+    "start": "nodejs index.js",
+    "build": "babel src -d lib && babel indexSrc.js -o index.js"
+  },
+  "eslintConfig": {
+    "plugins": [
+      "meteor"
+    ],
+    "extends": [
+      "airbnb/base",
+      "plugin:meteor/guide"
+    ],
+    "rules": {}
   },
   "keywords": [
     "murlan",
@@ -23,6 +34,14 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.7.7",
+    "babel-core": "^6.7.7",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-meteor": "^3.4.0",
+    "eslint-plugin-react": "^4.3.0",
     "mocha": "^2.4.5",
     "should": "^8.3.0"
   },
